[css] Fix for z-index issue making compose un-clickable

--- a/public/css/baobab.less
+++ b/public/css/baobab.less
@@ -228,7 +228,8 @@ a {
     right: 0;
     padding-left:15px;
     box-sizing:border-box;
-
+    z-index: 3;
+    
     &.ng-hide-remove {
       opacity: 0;
       -webkit-transition: opacity 250ms ease-out;
